--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
                 </li>
                 <li><a href="./index.html">Expertises</a></li>
                 <li><a href="">Présentation</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="">Blog</a></li>
                 <li><a href="" class="btn">Faire appel à nous</a></li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
     <section id="landing" class="dark">
         <div class="container">
             <div>
-                <h1>Un système unique pour votre <span class="blue">présence</span> en ligne</h1>
+                <h1>Développer la présence de votre <span class="bold"><span class="blue">boutique</span> en ligne</span></h1>
                 <p class="uppercase">Nous ne sommes pas de simples prestataires, nous sommes vos <span class="blue">partenaires</span></p>
                 <h2>Experts <span class="blue">Google Ads</span></h2>
             </div>
@@ -72,8 +72,8 @@
 
             <div class="slide">
                 <div><svg width="31" height="30" viewBox="0 0 31 30" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M25.0422 12.1857C25.0422 14.8748 24.1691 17.3588 22.6983 19.3741L30.1167 26.7969C30.8491 27.5292 30.8491 28.7184 30.1167 29.4508C29.3842 30.1831 28.1947 30.1831 27.4622 29.4508L20.0439 22.028C18.0282 23.5044 15.5437 24.3714 12.8541 24.3714C6.12136 24.3714 0.666016 18.9172 0.666016 12.1857C0.666016 5.45428 6.12136 0 12.8541 0C19.5869 0 25.0422 5.45428 25.0422 12.1857ZM12.8541 20.622C13.9622 20.622 15.0594 20.4038 16.0832 19.9798C17.1069 19.5558 18.0371 18.9344 18.8206 18.1511C19.6041 17.3677 20.2257 16.4377 20.6497 15.4141C21.0738 14.3906 21.292 13.2936 21.292 12.1857C21.292 11.0778 21.0738 9.98083 20.6497 8.9573C20.2257 7.93376 19.6041 7.00375 18.8206 6.22038C18.0371 5.437 17.1069 4.81559 16.0832 4.39162C15.0594 3.96766 13.9622 3.74945 12.8541 3.74945C11.746 3.74945 10.6488 3.96766 9.62506 4.39162C8.60133 4.81559 7.67114 5.437 6.88761 6.22038C6.10407 7.00375 5.48254 7.93376 5.0585 8.9573C4.63445 9.98083 4.4162 11.0778 4.4162 12.1857C4.4162 13.2936 4.63445 14.3906 5.0585 15.4141C5.48254 16.4377 6.10407 17.3677 6.88761 18.1511C7.67114 18.9344 8.60133 19.5558 9.62506 19.9798C10.6488 20.4038 11.746 20.622 12.8541 20.622Z" fill="white"/></svg></div>
-                <h3>Présence en ligne</h3>
-                <p class="gray">Nous façonnons et cultivons vos réseaux sociaux, pilotons vos campagnes Google Ads pour une visibilité inégalée, et optimisons le référencement de vos boutiques en ligne pour une performance maximale.</p>
+                <h3>Référencement en ligne</h3>
+                <p class="gray">Nous vous accompagnons dans le développement de votre présence en ligne. Nous travaillons sur le référencement de votre site avec une expertise en <span class="bold">SEO</span>, gérons vos campagnes <span class="bold">Google Ads</span> pour une visibilité accrue, et cultivons vos <span class="bold">réseaux sociaux</span> pour renforcer votre impact digital.</p>
                 <a href="" class="btn2">
                     <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
                     En savoir plus
@@ -91,9 +91,9 @@
             <div>
                 <div>
                     <h3><span class="blue">Pourquoi nous</span></h3>
-                    <h2>Des mécanismes uniques et performants</h2>
+                    <h2>Un système unique et performant</h2>
                 </div>
-                <p>Avec OMNIPRESENS redécouvrez votre façon de digitaliser vos projets !</p>
+                <p>Bienvenue chez <span class="bold">OMNIPRESENS</span>, votre partenaire de confiance dédié à l'excellence en matière de communication et marketing digital, établi au cœur du Pays Basque. </p>
                 <a href="" class="btn">Découvrir nos mécanismes secrets</a>
             </div>
             <img src="./images/img2.jpg" alt="">
@@ -106,8 +106,9 @@
 
         <div class="container">
             <div>
-                <h2>Du contenu de qualité pour votre boutique</h2>
-                <p>Développement d'une stratégie de contenu pour les réseaux sociaux, en mettant l'accent sur TikTok et Instagram, avec des publications régulières pour stimuler l'engagement.<br>Réalisation photographique, vidéographique avec montage et retouche en post-production afin de renvoyer la meilleure image de vos produits.</p>
+                <h2>Une équipe de qualité au service de votre entreprise</h2>
+                <p>Nous nous engageons à propulser votre <span class="bold">boutique e-commerce</span> vers de nouveaux sommets de réussite, en vous offrant une gamme complète de services axés sur la croissance et la rentabilité.</p>
+                <p>Notre mission ? Développer et optimiser votre <span class="bold">présence en ligne</span> pour maximiser votre <span class="bold">visibilité</span>, votre <span class="bold">trafic</span> et vos conversions.</p>
             </div>
             <div class="grid">
                 <div class="item">
@@ -155,11 +156,11 @@
                     <h3><span class="blue">Présence en ligne</span></h3>
                     <h2>Élevez votre présence en ligne au sommet</h2>
                 </div>
-                <p>Avec OMNIPRESENS, redécouvrez votre façon de digitaliser vos projets. Des regards jeunes et créatif, tout en efficacité et professionnalisme.</p>
+                <p>Avec <span class="bold">OMNIPRESENS</span>, redécouvrez votre façon de digitaliser vos projets. Des regards jeunes et créatif, tout en efficacité et professionnalisme.</p>
                 <div class="stats">
                     <div class="stat">
                         <span class="blue uppercase">+2 000 000</span>
-                        <span class="gray uppercase">Personnes touchées</span>
+                        <span class="gray uppercase">Vues cumulées</span>
                     </div>
                 </div>
             </div>
@@ -203,6 +204,80 @@
         </div>
 
     </section>
+
+
+    <section id="articles">
+
+        <h2>Nos derniers articles</h2>
+
+        <div id="articles__container">
+            <div class="article" style="background-image: url(./images/pexels-greta-hoffman-7675870.jpg);">
+                <h3>L'importance  de la Présence en Ligne  : Les Chiffres ne Mentent Pas !</h3>
+                <p>Dans un contexte où la technologie régit les échanges commerciaux, la présence en ligne est cruciale pour toute entreprise, quelle que soit sa taille. Négliger cet aspect peut entraîner des conséquences financières désastreuses. Les chiffres ne mentent pas, voyons pourquoi...</p>
+                <a href="" class="btn2">
+                    <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
+                    En savoir plus
+                </a>
+            </div>
+            <div class="article" style="background-image: url(./images/pexels-ivan-samkov-7620629.jpg);">
+                <h3>L'Évolution de l'E-commerce : Pourquoi les Boutiques en Ligne Sont Essentielles pour Toute Entreprise ?</h3>
+                <p>L'e-commerce a révolutionné les interactions clients-entreprises et souligne l'importance grandissante des boutiques en ligne pour toutes les entreprises. Voyons comment cette tendance affecte le monde des affaires...</p>
+                <a href="" class="btn2">
+                    <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
+                    En savoir plus
+                </a>
+            </div>
+            <div class="article" style="background-image: url(./images/pexels-zachtheshoota-2953898.jpg);">
+                <h3>La Puissance de la Création de Contenu : Saisir les Opportunités de ce nouveau marché...</h3>
+                <p>Dans un monde numérique en perpétuelle évolution, la création de contenu est cruciale pour toute entreprise. Elle offre des opportunités uniques pour engager le public, renforcer la marque et stimuler la croissance. Voyons pourquoi et comment en tirer parti...</p>
+                <a href="" class="btn2">
+                    <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
+                    En savoir plus
+                </a>
+            </div>
+        </div>
+
+    </section>
+
+
+    <footer class="dark">
+
+        <div class="devis">
+            <div>
+                <h2>Besoin d'un audit ou d'un devis ?</h2>
+                <p class="uppercase">Réserver une consultation gratuite ou contactez-nous</p>
+            </div>
+            <div>
+                <a href="" class="btn">Planifier un appel de 30 min</a>
+                <a href="" class="btn2">
+                    <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
+                    Formulaire de contact
+                </a>
+            </div>
+        </div>
+
+        <span></span>
+
+        <div id="footer">
+            <div>
+                <a class="logo">
+                    <img src="" alt="Logo de OMNIPRESENS">
+                    <p class="uppercase">OMNIPRESENS</p>
+                </a>
+                <a href=""><img src="" alt="Logo de OMNIPRESENS"></a>
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>© 2024 OMNIPRESENS</p>
+                <a href="">Mentions légales</a>
+                <a href="">Politique de confidentialité</a>
+            </div>
+        </div>
+
+    </footer>
     
 </body>
 </html>
