--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
 
     <section id="contenu" class="dark">
 
+        <video id="video-bg" autoplay muted loop>
+            <source src="./images/contenu.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
         <div class="container">
             <div>
                 <div>
