--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <li><a href="./index.html">Expertises</a></li>
                 <li><a href="">Présentation</a></li>
                 <li><a href="">Blog</a></li>
-                <li><a href="" class="btn">Faire appel à nous</a></li>
+                <li><a href="./contact.html" class="btn">Faire appel à nous</a></li>
                 <li id="burger_menu" onclick="toggleNav()"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="10" y="0.5" width="15" height="3" rx="1.5" fill="white"/><rect y="10.5" width="25" height="3" rx="1.5" fill="white"/><rect x="5" y="20.5" width="20" height="3" rx="1.5" fill="white"/></svg></li>
             </ul>
             <ul id="nav_slider">
                 <li><a href="./index.html">Expertises</a></li>
                 <li><a href="">Présentation</a></li>
                 <li><a href="">Blog</a></li>
-                <li><a href="" class="btn">Faire appel à nous</a></li>
+                <li><a href="./contact.html" class="btn">Faire appel à nous</a></li>
             </ul>
         </nav>
     </header>
@@ -119,7 +119,7 @@
                     <h2>Un système unique et performant</h2>
                 </div>
                 <p>Bienvenue chez <span class="bold">OMNIPRESENS</span>, votre partenaire de confiance dédié à l'excellence en matière de communication et marketing digital, établi au cœur du Pays Basque. </p>
-                <a href="" class="btn">Découvrir nos mécanismes secrets</a>
+                <a href="./contact.html" class="btn">Découvrir nos mécanismes secrets</a>
             </div>
             <img src="./images/img2.jpg" alt="">
         </div>
@@ -161,8 +161,8 @@
                 <p class="uppercase">Réserver une consultation gratuite ou contactez-nous</p>
             </div>
             <div>
-                <a href="" class="btn">Planifier un appel de 30 min</a>
-                <a href="" class="btn2">
+                <a href="./contact.html" class="btn">Planifier un appel de 30 min</a>
+                <a href="./contact.html" class="btn2">
                     <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
                     Formulaire de contact
                 </a>
@@ -208,7 +208,7 @@
                     <img src="./images/vscode.png" alt="Logo du logiciel Visual Studio Code">
                     <img src="./images/shopify.png" alt="Logo de l'application Shopify">
                 </div>
-                <a href="" class="btn">Lancez votre boutique</a>
+                <a href="./contact.html" class="btn">Lancez votre boutique</a>
             </div>
             <img src="./images/img4.jpg" alt="">
         </div>
@@ -278,8 +278,8 @@
                 <p class="uppercase">Réserver une consultation gratuite ou contactez-nous</p>
             </div>
             <div>
-                <a href="" class="btn">Planifier un appel de 30 min</a>
-                <a href="" class="btn2">
+                <a href="./contact.html" class="btn">Planifier un appel de 30 min</a>
+                <a href="./contact.html" class="btn2">
                     <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
                     Formulaire de contact
                 </a>
@@ -311,105 +311,7 @@
 
 
 
-    <script>
-        var nav = document.getElementById('nav_slider');
-
-        var expertise = document.getElementById('expertise');
-        var tabExpertises = [
-            'Google Ads', 
-            'Google Shopping',  
-            'SEO', 
-            'Adobe After Effects', 
-            'Adobe Premiere Pro', 
-            'Adobe Photoshop', 
-            'Wordpress', 
-            'Shopify', 
-            'Web Design', 
-            'Développement Web'
-        ];
-        var currentIndex = 0;
-        var currentText = '';
-        var letterIndex = 0;
-        var intervalId;
-
-        var videos = document.querySelectorAll('.phone_anim');
-
-        function playNextVideo(index) {
-            videos[index].style.display = 'none';
-            var nextIndex = (index + 1) % videos.length;
-            videos[nextIndex].style.display = 'block';
-            videos[nextIndex].play();
-        }
-
-
-        function toggleNav() {
-            nav.classList.toggle('active');
-        }
-
-
-        // Fonction pour effacer le texte précédent lettre par lettre
-        function eraseText() {
-            if (expertise.textContent.length > 0) {
-                expertise.textContent = expertise.textContent.slice(0, -1);
-                setTimeout(eraseText, 50); // Vitesse de suppression (en millisecondes)
-            } else {
-                updateText(); // Une fois que le texte est effacé, appeler la fonction pour afficher le nouveau texte
-            }
-        }
-
-        // Fonction pour mettre à jour le texte lettre par lettre
-        function updateText() {
-            if (letterIndex < tabExpertises[currentIndex].length) {
-                currentText += tabExpertises[currentIndex].charAt(letterIndex);
-                expertise.textContent = currentText;
-                letterIndex++;
-                setTimeout(updateText, 100); // Vitesse d'ajout de chaque lettre (en millisecondes)
-            } else {
-                currentIndex = (currentIndex + 1) % tabExpertises.length;
-                currentText = '';
-                letterIndex = 0;
-                setTimeout(eraseText, 1000); // Durée avant d'effacer le texte précédent et afficher le nouveau texte (en millisecondes)
-            }
-        }
-
-
-
-
-        // Démarrer le processus après que la page soit complètement chargée
-        window.addEventListener('load', function() {
-            // document.getElementById('body').style.visibility = 'visible';
-            updateText();
-
-            videos[0].addEventListener('ended', function() {
-                playNextVideo(0);
-            });
-            videos[1].addEventListener('ended', function() {
-                playNextVideo(1);
-            });
-            videos[2].addEventListener('ended', function() {
-                playNextVideo(2);
-            });
-            videos[3].addEventListener('ended', function() {
-                playNextVideo(3);
-            });
-            videos[0].play();
-        });
-    </script>
-
-
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/66325ea31ec1082f04e9e0d8/1hsqc3bqr';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-        })();
-    </script>
-    <!--End of Tawk.to Script-->
+    <script src="./script.js"></script>
     
 </body>
 </html>
